# diffvg

./: .gitignore  .gitmodules  log.txt  memo.md  potry.pyproject.toml  pyproject.toml  setup.py  test_torch.py
apps/: single_circle.py
font_sample/: main.py  main_font.py  test_image_reward.py
