[project]
name = "diffvg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cssutils>=2.2.0",
    "matplotlib>=3.8.4",
    "numpy>=1.22.4",
    "packaging>=21.3",
    "scikit-image>=0.19.3",
    "setuptools==68",
    "svgpathtools>=1.4.1",
    "torch>=1.13.0",
    "torchvision>=0.11.3",
]
